# smart-sensor-old

./: .gitignore  Cargo.toml  smart-sensor.kicad_pro  smart-sensor.kicad_sch
smart-sensor-rppicow/: Cargo.toml  build.rs
smart-sensor-rppicow/.cargo/: config.toml
smart-sensor-rppicow/src/: converts.rs  main.rs  mqtt.rs  neo_pixel.rs
src/: lib.rs  mutex_box.rs
wall-clock-time/: Cargo.toml
wall-clock-time/src/: clock_time.rs  lib.rs  sntpc.rs
