[package]
name = "smart-sensor-rppicow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-sensor = { path = ".." }
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0" }
embassy-executor = { version = "0.1.0", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "pio",
] }
embassy-net = { version = "0.1.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "unstable-traits",
    "nightly",
] }
atomic-polyfill = "1.0.2"
static_cell = "1.0"
defmt = "=0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
rust-mqtt = { version = "0.1.5", default-features = false, features = [
    "no_std",
] }
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
heapless = "0.7.15"
numtoa = "0.2.4"
serde-json-core = "0.5.0"
